TestCases/General/disallowAutomountServiceAccountTokenForPod/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: automount-serviceaccount-token
tests:
  - name: automount-serviceaccount-token
    template: ../../../General/disallowAutomountServiceAccountTokenForPod/constraintTemplate.yaml
    constraint: ../../../General/disallowAutomountServiceAccountTokenForPod/constraint.yaml
    cases:
      - name: example-allowed
        object: example/allowed.yaml
        assertions:
          - violations: no
      - name: example-disallowed
        object: example/disallowed.yaml
        assertions:
          - violations: yes
      - name: update
        object: example/update.yaml
        assertions:
          - violations: no
